--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
 	</dependencyManagement>
 
 	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    	 <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
@@ -35,17 +37,12 @@
 			<artifactId>spring-jdbc</artifactId>
 		</dependency>
 		<!-- exemple de connecteur jdbc -->
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.41</version>
-			<scope>runtime</scope>
-		</dependency>
-		
+
 		
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
+			<scope>runtime</scope>
 			<version>2.4.0</version>
 		</dependency>
 	</dependencies>
